# Multi-video-render

./: README.md
NativeCodec/: .gitignore  build.gradle
NativeCodec/app/: build.gradle
NativeCodec/app/src/main/: AndroidManifest.xml
NativeCodec/app/src/main/assets/: data2.json  data3.json  fragmentShader  rgbfragmentshader  yuvfragmentshader  yuvvertextshader
NativeCodec/app/src/main/cpp/: Android.mk  CMakeLists.txt  CycleQueue.cpp  CycleQueue.h
NativeCodec/app/src/main/cpp/player/: IsmartvBase.c  IsmartvBase.h  IsmartvMediaPlayer.c  IsmartvMediaPlayer.h  IsmartvPlayer.c  IsmartvPlayer.h  IsmartvPlayerInternal.h  IsmartvPlayerJni.cpp  IsmartvPlayerJni.h  Mp4Extractor.c  Mp4Extractor.h
NativeCodec/app/src/main/cpp/player/source/: MediaSource.cpp  MediaSource.h
NativeCodec/app/src/main/java/cn/ismartv/player/: IsmartvPlayer.java  Util.java
NativeCodec/app/src/main/java/com/example/nativecodec/: Application.java  GLUtil.java  ImageGLSurfaceView.java  MyGLSurfaceView.java  NativeCodecActivity.java  ParseJson.java
NativeCodec/app/src/main/jniLibs/armeabi-v7a/include/libavcodec/: avcodec.h
NativeCodec/app/src/main/jniLibs/armeabi-v7a/include/libavfilter/: avfilter.h
NativeCodec/app/src/main/jniLibs/armeabi-v7a/include/libavutil/: ffversion.h
NativeCodec/app/src/main/jniLibs/armeabi-v7a/include/libffmpeg/: config.h
NativeCodec/app/src/main/res/layout/: main.xml
NativeCodec/app/src/main/res/values/: strings.xml
